--- a/src/components/screens/Landing.module.scss
+++ b/src/components/screens/Landing.module.scss
@@ -2,7 +2,6 @@
 
 .root {
   background-color: $color-light-blue;
-  z-index: -1;
 }
 
 .inner {
